# siloutil

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  de.po  messages.mo  siloutil.pot
src/: Makefile  Makefile.am  Makefile.in  helloworld.cpp  helloworld.lo  libsiloutil.la
src/.deps/: helloworld.Plo
src/.libs/: libsiloutil.la  libsiloutil.lai
tests/: test_ver.py
